--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(veeam)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(veeam main.cpp BlockReader.cpp BlockReader.hpp BlockHasher.cpp BlockHasher.hpp ProduceConsumePipe.hpp ProduceConsumePipe.cpp DataBlock.cpp DataBlock.hpp)
+add_executable(veeam main.cpp BlockReader.cpp BlockReader.hpp BlockHasher.cpp BlockHasher.hpp ProduceConsumePipe.hpp ProduceConsumePipe.cpp DataBlock.cpp DataBlock.hpp ArgParser.cpp ArgParser.hpp FileWriter.cpp FileWriter.hpp)
